// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentLists/Manual/ArticleItem renders correctly with extras 1`] = `
<div
  class="sd-list-item sd-list-item--activated"
  style="cursor: grab; opacity: 1;"
>
  <div
    class="sd-list-item__column"
  >
    <span
      class="sd-list-item__serial-number sp-listSerialNumberMinWidth"
    >
      2
    </span>
  </div>
  <div
    class="sd-list-item__column sd-list-item__column--grow"
  >
    <div
      class="sd-list-item__row"
    >
      <span
        class="sd-overflow-ellipsis sd-list-item__text-strong"
      >
        test
      </span>
    </div>
    <div
      class="sd-list-item__row"
    >
      <span
        class="sd-overflow-ellipsis sd-list-item--element-grow"
      >
        <time
          flow="right"
          sd-tooltip="created: 12:00, 25.07.2017"
          title="2017-07-26T15:43:33+02:00"
        >
          15:43, 26.07.2017
        </time>
      </span>
      <span
        class="label label--success label--hollow"
      >
        FIXME1
      </span>
    </div>
  </div>
  <div
    class="sd-list-item__action-menu sd-list-item__action-menu--direction-row"
  >
    <button
      class="pull-right"
      flow="left"
      sd-tooltip="Pin"
      title="Pin"
    >
      <i
        class="icon-pin"
      />
    </button>
    <button
      flow="left"
      sd-tooltip="Remove"
    >
      <i
        class="icon-trash"
      />
    </button>
  </div>
</div>
`;

exports[`ContentLists/Manual/ArticleItem renders correctly without extras 1`] = `
<div
  class="sd-list-item sd-list-item--activated"
  style="cursor: grab; opacity: 1;"
>
  <div
    class="sd-list-item__column sd-list-item__column--grow"
  >
    <div
      class="sd-list-item__row"
    >
      <span
        class="sd-overflow-ellipsis sd-list-item__text-strong"
      >
        test
      </span>
    </div>
    <div
      class="sd-list-item__row"
    >
      <span
        class="sd-overflow-ellipsis sd-list-item--element-grow"
      >
        <time
          flow="right"
          sd-tooltip="created: 12:00, 25.07.2017"
          title="2017-07-26T15:43:33+02:00"
        >
          15:43, 26.07.2017
        </time>
      </span>
      <span
        class="label label--success label--hollow"
      >
        FIXME1
      </span>
    </div>
  </div>
</div>
`;
